// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyAllocatedCases should render a message when there is no worker for the current user 1`] = `
<DocumentFragment>
  <p
    class="govuk-body govuk-!-margin-top-5"
  >
    No people are assigned to you
  </p>
</DocumentFragment>
`;

exports[`MyAllocatedCases should render an error if the API returns a 500 1`] = `
<DocumentFragment>
  <span
    class="govuk-error-message lbh-error-message"
  >
    <span
      class="govuk-visually-hidden"
    >
      Error:
    </span>
     There was a problem. Please refresh the page or try again later.
  </span>
</DocumentFragment>
`;

exports[`MyAllocatedCases should render properly 1`] = `
<DocumentFragment>
  <p>
    Displaying (1) allocation
  </p>
  MockedAllocatedCasesTable
</DocumentFragment>
`;
